--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "zing/package-skeleton-laravel",
-    "description": "A skeleton repository for Laravel Packages",
-    "keywords": ["laravel", "package", "skeleton"],
+    "name": "laravel-interaction/clap",
+    "description": "User clap/unclap behaviour for Laravel.",
+    "keywords": ["laravel", "claps", "clap"],
     "license": "MIT",
     "authors": [
         {
@@ -15,10 +15,13 @@
     },
     "require": {
         "php": "^7.2 || ^8.0",
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0"
+        "illuminate/database": "^6.3 || ^7.0 || ^8.0",
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0",
+        "laravel-interaction/support": "^0.3"
     },
     "require-dev": {
         "mockery/mockery": "~1.3.3 || ^1.4.2",
+        "moontoast/math": "^1.0",
         "nunomaduro/larastan": "^0.7.2",
         "orchestra/testbench": "^4.0 || ^5.0 || ^6.0",
         "phpunit/phpunit": "^8.0,<8.5.12 || ^9.3.3",
@@ -27,12 +30,12 @@
     },
     "autoload": {
         "psr-4": {
-            "Zing\\Skeleton\\": "src"
+            "LaravelInteraction\\Clap\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Zing\\Skeleton\\Tests\\": "tests"
+            "LaravelInteraction\\Clap\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -61,13 +64,13 @@
         ]
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "0.3-dev"
+        },
         "laravel": {
             "providers": [
-                "Zing\\Skeleton\\SkeletonServiceProvider"
-            ],
-            "aliases": {
-                "Skeleton": "Zing\\Skeleton\\Facades\\Skeleton"
-            }
+                "LaravelInteraction\\Clap\\ClapServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
